# gridded_automata

./: Cargo.toml  README.adoc
src/impl/: bb.rs  cgol.rs  cgol.wgsl  cgol_compute.wgsl  lant.rs  lant.wgsl  wire_world.rs  ww.rs  ww.wgsl
src/lib/: automata.rs  ca_caller.wgsl  ca_header.wgsl  cells.rs  color.rs  mod.rs  render.wgsl  rules.rs  shader.wgsl  state.rs  vertex.rs
src/lib/compute/: header.wgsl  tail.wgsl
