[package]
name = "gridded_automata"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.26"
wgpu = "0.13"
bytemuck = { version = "1.4", features = [ "derive" ] }
cgmath = "0.18"
pollster = "0.2"
image = "0.24.5"
anyhow = "1.0.66"

rand = "*"

[lib]
name = "gridded_automata"
path = "src/lib/mod.rs"

[[bin]]
name = "cgol"
path = "src/bin/cgol.rs"

[[bin]]
name = "ww"
path = "src/bin/ww.rs"

[[bin]]
name = "bb"
path = "src/bin/bb.rs"

[[bin]]
name = "lant"
path = "src/bin/lant.rs"

[[bin]]
name = "seeds"
path = "src/bin/seeds.rs"